[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/radar_icons.png" type="Texture" id=1]
[ext_resource path="res://fonts/computer.tres" type="DynamicFont" id=2]
[ext_resource path="res://objects/radar/WeaponIndicator.gd" type="Script" id=3]
[ext_resource path="res://sound/computer_hover.ogg" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 34, 32, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 34, 32, 12 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 32, 12 )

[node name="WeaponIndicator" type="Control"]
use_parent_material = true
margin_right = 48.0
margin_bottom = 26.0
rect_min_size = Vector2( 48, 26 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
use_parent_material = true
margin_right = 48.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.407843, 0.498039, 0.541176, 1 )
text = "WPN1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Fire" type="TextureButton" parent="."]
use_parent_material = true
margin_left = 8.0
margin_top = 12.0
margin_right = 40.0
margin_bottom = 24.0
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
texture_hover = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Status" type="Label" parent="."]
visible = false
use_parent_material = true
margin_top = 12.0
margin_right = 48.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.407843, 0.498039, 0.541176, 1 )
text = "ARMED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio_Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "UI"
[connection signal="mouse_entered" from="Button_Fire" to="." method="_on_Button_Fire_mouse_entered"]
[connection signal="pressed" from="Button_Fire" to="." method="_on_Button_Fire_pressed"]
